overlays/production/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    gethomepage.dev/enabled: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - home.elmstreet79.de
      secretName: homepage-tls
  rules:
    - host: home.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
